# pairs-trading

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sample.env
app/: streamlit_app.py
scripts/: run_backtest.py
src/stat_arb/: __init__.py  backtest.py  config.py  data.py  pipeline.py  plot.py  plotly_charts.py  preprocess.py  research.py  stats.py  storage.py
tests/: test_backtest.py  test_config.py  test_data.py  test_pipeline.py  test_research.py  test_stats.py  test_storage.py
