[project]
name = "pairs-trading-dashboard"
version = "0.1.0"
description = "Local Streamlit dashboard for ETF pairs-trading research and backtesting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.20",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "streamlit>=1.58",
  "duckdb>=1.0",
  "pyarrow>=15.0",
  "yfinance>=0.2",
  "python-dateutil>=2.8",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = ["black>=25.0", "flake8>=7.0", "pre-commit>=3.5", "pytest>=7.4", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
